--- a/bot.yml
+++ b/bot.yml
@@ -1,3 +1,22 @@
-name: Easy Peasy Bot
-description: A simple node.js bot
+name: Slack Jirabot
+description: A simple JIRA node.js bot
 avatar: avatar.png
+config:
+  - name: HOST
+    friendly_name: API.AI developer token
+    info: This is utterly necessary
+    type: secret
+    default: NOT A VALID TOKEN
+    global: true
+  - name: USER
+    friendly_name: API.AI developer token
+    info: This is utterly necessary
+    type: secret
+    default: NOT A VALID TOKEN
+    global: true
+  - name: PASS
+    friendly_name: API.AI developer token
+    info: This is utterly necessary
+    type: secret
+    default: NOT A VALID TOKEN
+    global: true
